--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+body{
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+    // background-color: antiquewhite;
+}
+.active-link
+{
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+}
