--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@ body{
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
-    // background-color: antiquewhite;
+    font-family: "HM Sans Regular","HM Sans Arabic Regular","sans-serif","Arial";
 }
 .active-link
 {
