--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -25,7 +25,7 @@
 
         <div class="content">
             <h1>Join Us</h1>
-            <p>Already have an account? <a href="#">Login</a> </p>
+            <p>Already have an account? <a routerLink="/login" href="#">Login</a> </p>
             <form class="row g-4 ">
       <div class="col-md-6">
         <label for="fname" class="form-label">First name</label>
