--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -77,3 +77,8 @@ form .reg .sec-svg{
     width: 53;
     height: 51;
 }
+
+form .reg p a{
+    // color: rgba($color: #363636, $alpha: 1.8);
+    color: #767676;
+}
