edit-seller-account

--- a/src/app/components/seller-account/seller-account.component.html
+++ b/src/app/components/seller-account/seller-account.component.html
@@ -1,4 +1,4 @@
-<!-- 
+
 <div class="AccountHeader">
     <div class="container">
         <div class="account">
@@ -31,4 +31,4 @@
             </div>
         </div>
     </div>
-</div> -->
+</div>
