--- a/src/app/components/nav-blank/nav-blank.component.html
+++ b/src/app/components/nav-blank/nav-blank.component.html
@@ -23,10 +23,10 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavId"> 
                     <ul class="navbar-nav me-auto mt-2 p-2">
                         <li  class="nav-item">
-                            <a class="nav-link" routerLink="#" routerLinkActive="active-link" >Home</a>
+                            <a class="nav-link" routerLink="home" routerLinkActive="active-link" >Home</a>
                         </li>
                          <li class="nav-item">
-                            <a class="nav-link" routerLink="#" routerLinkActive="active-link" >Woman</a>
+                            <a class="nav-link" routerLink="seller-account" routerLinkActive="active-link" >Woman</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" routerLink="#" routerLinkActive="active-link" >Men</a>
