--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 
 <!-- <div class="container" > -->
-    <section>
+    <section style="height: 80px;">
         <div class="container my-0">
             <div class="row">
                     <a href="">
