--- a/src/app/components/nav-blank/nav-blank.component.html
+++ b/src/app/components/nav-blank/nav-blank.component.html
@@ -1,4 +1,11 @@
-<section>
+<section style="height: 130px;">
+    <div class="login-up">
+        <ul>
+            <li><a href="register">Create An Account</a></li>
+            <li><a href="login">Sign In</a></li>
+            <li><a href="#">Find Stores</a></li>
+        </ul>
+    </div>
     <div class="F-section">
         <form action="">
             <input type="search" class="" placeholder="What are you looking for?"> 
@@ -12,7 +19,6 @@
             </svg>
             <!-- <a routerLink="#" class="position-relative " href="#"><i [ngClass]="{'red-icon': isActive}" (click)="toggelIcon()"  class="fa-solid fa-heart"></i></a> -->
             <a routerLink="#" class="position-relative mx-5" href="#" ><i class="fa-solid fa-bag-shopping "></i></a>
-
             
         </div>
     </div>
