--- a/src/app/components/seller-account/seller-account.component.html
+++ b/src/app/components/seller-account/seller-account.component.html
@@ -11,24 +11,22 @@
                         <h1>Samsung Memory</h1>
                         <i class="fa-solid fa-ellipsis"></i>
                     </div>
-
                     <p>Memory for every endeavor – get fast storage solutions that work seamlessly with your <br> devices.</p>
-
                     <div class="connection">
                         <p class="connect"><i class="fa-solid fa-link"></i>  Connect with samsung</p>
                         <button><i class="fa-solid fa-sort-down"></i></button>
                     </div>
-                    
                     <span>Interests</span>
                     <div class="btns">
-                        <a href="">Memory</a>
-                        <a href="">Storage</a>
-                        <a href="">Photography</a>
-                        <a href="">Technology</a>
-                        <a href="">Ssd</a>
+                        <a href="#">Memory</a>
+                        <a href="#">Storage</a>
+                        <a href="#">Photography</a>
+                        <a href="#">Technology</a>
+                        <a href="#">Ssd</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+<hr>
