--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@ body{
     margin: 0px;
     box-sizing: border-box;
     font-family: "HM Sans Regular","HM Sans Arabic Regular","sans-serif","Arial";
+    min-height: 100vh;
 }
 .active-link
 {
