--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,10 +1,11 @@
- 
 
-// *{
-//     margin: 0;
-//     padding: 0;
-//     box-sizing: border-box;
-// }
+.footer{
+    background-color: #e4e4e4;
+    padding: 70px 0;
+    margin-top: 30px;
+    position: sticky;
+    top: 100%;
+}
 .container{
     max-width: 1170px;
     margin: auto;
@@ -15,10 +16,6 @@
 }
 ul{
     list-style: none;
-}
-.footer{
-    background-color: #e4e4e4;
-    padding: 70px 0;
 }
 .footer-col{
     width: 25%;
