--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -61,6 +61,30 @@
     
     <section>
         <div class="container">
+            <div class="btn">
+                <!-- <button (click)="">Home</button> -->
+                <!-- <button (click)="womanprod()">Woman</button> -->
+                <!-- <button (click)="">Men</button> -->
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <h2 class="recomend">Trending now</h2>
+                    <owl-carousel-o [options]="categoryOptions">
+                        <ng-container *ngFor="let item of prodFor">
+                            <ng-template class="ng-template " carouselSlide>
+                                <img class="img" height="400" width="200" style="margin-right: 10px;" [src]=" imgpath +item?.poster_path" [alt]="item?.title" [title]="item?.title">
+                                <h3 class="h6 text-main"> {{item?.title}} </h3>
+                                <p> {{item?.vote_count|currency:"EGP"}} </p>
+                            </ng-template>
+                        </ng-container>
+                    </owl-carousel-o>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
             <div class="row">
                 <!-- <div class="col-md-1"></div> -->
                 <div class="col-md-12">
@@ -85,45 +109,94 @@
             <div class="row">
                 <div class="col-md-12 first">
                     <div class="colum">
-                        
-                        <img  src="../../../assets/images/corinne-kutz-j_9drN8w6gw-unsplash.jpg" alt="">
-                        <!-- <div class="content">
+                        <div class="container-img"> 
+                            <img  src="../../../assets/images/corinne-kutz-j_9drN8w6gw-unsplash.jpg" alt="">
                             <div class="icon">
-                                <svg  width="30" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <svg  width="40" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path stroke="black" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" />
                                 </svg>
-                                <svg  width="30" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path stroke="black" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" />
+                                <svg width="40" height="30" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M19 13H13V19H11V13H5V11H11V5H13V11H19V13Z" fill="currentColor"/>
                                 </svg>
-        
                             </div>
                             <div class="profile">
-                                <img height="30" width="30" src="../../../assets/images/andrik-langfield-AAfC-hQpyWM-unsplash.jpg" alt="">
+                                <img src="../../../assets/images/andrik-langfield-AAfC-hQpyWM-unsplash.jpg" alt="">
                                 <h5>jackFashion</h5>
                             </div>
+                        </div>
+                        <div class="container-img">
+                        <img  src="../../../assets/images/corinne-kutz-j_9drN8w6gw-unsplash.jpg" alt="">
+                        
+                        </div>
+                        <div class="container-img">
+                        <img  src="../../../assets/images/karsten-winegeart-CIeE1Pg5-YU-unsplash.jpg" alt="">
+                        </div>
+                        <div class="container-img">
+                        <img  src="../../../assets/images/corinne-kutz-j_9drN8w6gw-unsplash.jpg" alt="">
+                        </div>
+
+                        <!-- <div class="content">
+                            
                         </div> -->
                     
-                        <img  src="../../../assets/images/corinne-kutz-j_9drN8w6gw-unsplash.jpg" alt="">
-                        <img  src="../../../assets/images/karsten-winegeart-CIeE1Pg5-YU-unsplash.jpg" alt="">
-                        <img  src="../../../assets/images/corinne-kutz-j_9drN8w6gw-unsplash.jpg" alt="">
                     </div>
                     
                 
                     <div class="colum">
+                        <div class="container-img">
                         <img  src="../../../assets/images/jeffery-erhunse-vjXP64dTovI-unsplash.jpg" alt="">
+                        <div class="icon">
+                                <svg  width="40" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path stroke="black" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" />
+                                </svg>
+                                <svg width="40" height="30" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M19 13H13V19H11V13H5V11H11V5H13V11H19V13Z" fill="currentColor"/>
+                                </svg>
+                            </div>
+                            <div class="profile">
+                                <img src="../../../assets/images/andrik-langfield-AAfC-hQpyWM-unsplash.jpg" alt="">
+                                <h5>jackFashion</h5>
+                            </div>
+                        </div>
+                        <div class="container-img">
                         <img  src="../../../assets/images/karsten-winegeart-CIeE1Pg5-YU-unsplash.jpg" alt="">
+                        </div>
+                        <div class="container-img">
                         <img  src="../../../assets/images/jeffery-erhunse-vjXP64dTovI-unsplash.jpg" alt="">
+                        </div>
+                        <div class="container-img">
                         <img  src="../../../assets/images/jeffery-erhunse-vjXP64dTovI-unsplash.jpg" alt="">
+                        </div>
                     </div>
                     <!-- <div class="profile">
                             <img height="30" src="../../../assets/images/andrik-langfield-AAfC-hQpyWM-unsplash.jpg" alt="">
                             <h5>jackFashion</h5>
                         </div> -->
                         <div class="colum">
-                        <img  src="../../../assets/images/karsten-winegeart-CIeE1Pg5-YU-unsplash.jpg" alt="">
+                            <div class="container-img">
+                                <img  src="../../../assets/images/karsten-winegeart-CIeE1Pg5-YU-unsplash.jpg" alt="">
+                                <div class="icon">
+                                <svg  width="40" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path stroke="black" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" />
+                                </svg>
+                                <svg width="40" height="30" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M19 13H13V19H11V13H5V11H11V5H13V11H19V13Z" fill="currentColor"/>
+                                </svg>
+                            </div>
+                            <div class="profile">
+                                <img src="../../../assets/images/andrik-langfield-AAfC-hQpyWM-unsplash.jpg" alt="">
+                                <h5>jackFashion</h5>
+                            </div>
+                            </div>
+                            <div class="container-img">
                         <img  src="../../../assets/images/jeffery-erhunse-vjXP64dTovI-unsplash.jpg" alt="">
+                            </div>
+                            <div class="container-img">
                         <img  src="../../../assets/images/walter-randlehoff-p-08ZLDt9y4-unsplash.jpg" alt="">
-                        <img  src="../../../assets/images/studio-reasons-Uc6Ctj_wm4w-unsplash.jpg" alt="">
+                            </div>
+                            <div class="container-img">
+                                <img  src="../../../assets/images/studio-reasons-Uc6Ctj_wm4w-unsplash.jpg" alt="">
+                            </div>
                         </div>
                     <!-- <div class="profile">
                             <img height="30" src="../../../assets/images/andrik-langfield-AAfC-hQpyWM-unsplash.jpg" alt="">
