--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -116,25 +116,112 @@ owl-carousel-o{
     gap: 25px;
     width: 100%;
 }
-.row .first img{
+// .row .first .colum .container-img::after {
+//   content: "";
+//   position: absolute;
+//   bottom: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 2px;
+//   transform: scaleX(0);
+//   transition: transform 0.3s ease;
+// }
+.row .first .colum .container-img{
+    width: 100%;
+    height: auto;
+    position: relative;
+    cursor: pointer;
+}
+.row .first .colum .container-img{
+   &:hover{
+        .icon{
+            visibility: visible;
+        }
+        .profile{
+            visibility: visible;
+        }
+        
+        opacity: 0.7;
+        transition: 0.2s ease;
+   }
+}
+.row .first .colum .container-img img{
      width: 100%;
-     height: 50%;
+     height: 100%;
      object-fit: cover;
 }
-.row .first .colum .content .icon{
-    position: absolute;
-    right: 40px;
+
+
+.row .first .colum .container-img .icon{
+    position:absolute;
     top: 5%;
-}
-.row .colum .content .profile{
-    position: absolute;
-    left: 40px;
-    top: 84%;
+    left: 67%;
+    display: flex;
+    gap: 5px;
+    visibility: hidden;
 }
 
-.row .first .colum .content .profile img{
-    display: inline;
+.row .first .colum .container-img .icon svg{
+    cursor: pointer;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 3px;
+    background-color: #e4e0e0;
 }
-.row .content .profile h5{
-    display: inline;
+.row .first .colum .container-img .icon svg:hover{
+    background-color: #ffff;
 }
+
+////////////////////////
+.row .first .colum .container-img .profile{
+    position:absolute;
+    bottom: 5%;
+    left: 5%;
+    display: flex;
+    gap: 5px;
+    visibility: hidden;
+}
+
+.row .first .colum .container-img .profile img{
+    border-radius: 25px;
+    width: 32px;
+    height: 32px;
+}
+.row .first .colum .container-img .profile:hover{
+    img{
+        width: 34px;
+        height: 34px;
+        border: 1px solid black;
+    }
+    h5{
+    font-weight:900;
+    text-decoration:underline;
+    }
+}
+
+.row .first .colum .container-img .profile h5{
+    font-weight: 700;
+    font-size: 1rem;
+    margin-top: 5px;
+    color: black;
+}
+.row .first .colum .container-img .profile h5:hover{
+    // font-weight:900;
+}
+// .row .first .colum .content .icon{
+//     position: absolute;
+//     right: 40px;
+//     top: 5%;
+// }
+// .row .colum .content .profile{
+//     position: absolute;
+//     left: 40px;
+//     top: 84%;
+// }
+
+// .row .first .colum .content .profile img{
+//     display: inline;
+// }
+// .row .content .profile h5{
+//     display: inline;
+// }
