--- a/src/app/components/nav-blank/nav-blank.component.scss
+++ b/src/app/components/nav-blank/nav-blank.component.scss
@@ -2,6 +2,7 @@ section {
   box-sizing: border-box;
   position: relative;
   padding: 10px 20px;
+  display: block;
 }
 .login-up ul {
   display: flex;
@@ -50,9 +51,19 @@ a i {
 .icon svg {
   margin-top: 26px;
   cursor: pointer;
+  outline: none;
 }
-.icon svg:hover {
-  fill: red;
+
+// svg path{
+//   // border: none;
+// }
+// .icon svg:hover {
+//   fill: red;
+//   stroke: white;
+// }
+
+.icon svg:active {
+  border-color: white;
   stroke: white;
 }
 .filled path {
