--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -32,6 +32,21 @@
 }
 
 ////////////////////////slider////////////////////////////
+/// 
+
+.container .row .trend .btn-trend{
+    margin-bottom: 10px;
+    // margin-top: 16px;
+    // overflow-x: scroll;
+    // overflow-y: hidden;
+    display: flex;
+    gap: 25px;
+    // white-space: nowrap;
+    // scrollbar-width: none;
+    justify-content: center;
+}
+
+
 owl-carousel-o{
     position: relative;
 }
@@ -116,16 +131,6 @@ owl-carousel-o{
     gap: 25px;
     width: 100%;
 }
-// .row .first .colum .container-img::after {
-//   content: "";
-//   position: absolute;
-//   bottom: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 2px;
-//   transform: scaleX(0);
-//   transition: transform 0.3s ease;
-// }
 .row .first .colum .container-img{
     width: 100%;
     height: auto;
@@ -205,23 +210,3 @@ owl-carousel-o{
     margin-top: 5px;
     color: black;
 }
-.row .first .colum .container-img .profile h5:hover{
-    // font-weight:900;
-}
-// .row .first .colum .content .icon{
-//     position: absolute;
-//     right: 40px;
-//     top: 5%;
-// }
-// .row .colum .content .profile{
-//     position: absolute;
-//     left: 40px;
-//     top: 84%;
-// }
-
-// .row .first .colum .content .profile img{
-//     display: inline;
-// }
-// .row .content .profile h5{
-//     display: inline;
-// }
