--- a/src/app/components/nav-blank/nav-blank.component.scss
+++ b/src/app/components/nav-blank/nav-blank.component.scss
@@ -10,6 +10,7 @@ section {
   gap: 15px;
   list-style: none;
   margin: 0;
+  margin-right: 55px;
 }
 .login-up ul li a {
   text-decoration: none;
