--- a/src/app/components/nav-blank/nav-blank.component.scss
+++ b/src/app/components/nav-blank/nav-blank.component.scss
@@ -98,6 +98,7 @@ input[type="search"] {
   font-weight: lighter;
   color: black;
   box-sizing: border-box;
+  background-color: #faf9f8;
 }
 input:focus {
   outline: none;
