--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@ body{
     box-sizing: border-box;
     font-family: "HM Sans Regular","HM Sans Arabic Regular","sans-serif","Arial";
     min-height: 100vh;
+    background-color: #faf9f8
 }
 
 
@@ -36,6 +37,7 @@ body{
     left: -70px;
     background-color: white;
     color: black;
+    background-color: #faf9f8;
 }
 .owl-carousel .owl-nav .owl-prev{
     font-size: 20px;
@@ -44,4 +46,5 @@ body{
     right: -70px;
     background-color: white;
     color: black;
+    background-color: #faf9f8;
 }
