--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,13 +20,15 @@ body{
 
 .owl-carousel .owl-nav .owl-next:hover{
     font-weight: bold;
-    background-color: white;
+    // background-color: white;
+    background-color: #faf9f8;
     color: black;
     
 }
 .owl-carousel .owl-nav .owl-prev:hover{
     font-weight: bold;
-    background-color: white;
+    // background-color: white;
+    background-color: #faf9f8;
     color: black;
     
 }
