--- a/src/app/components/favourites/favourites.component.html
+++ b/src/app/components/favourites/favourites.component.html
@@ -1,14 +1,36 @@
 <section>
-    <div class="container">
+    <div class="container-fluid">
         <div>
             <h1>MY FAVOURITES</h1>
             <hr>
         </div>
-
-        <div class="content">
+        <!-- <div class="content">
             <p>Your favourites is empty.</p>
             <a class="btn btn-dark" href="home"> Go Shopping </a>
+        </div> -->
+        <div class="row">
+            <div class="col-md-3 first">
+                <div class="productimg">
+                    <img src="../../../assets/images/alberto-cognetti-GfkIiqcNn5k-unsplash.jpg" alt="">
+                </div>
+                <div class="description">
+                    <h2>Lorem, ipsum dolor.</h2>
+                    <p>$ 49.00</p>
+                </div>
+                <div class="addtobasket">
+                    <button class="btn btn-dark">ADD TO CART </button>
+                    <button class="btn btn-danger .col-6">Remove </button>
+                </div>
+            </div>
+            <div class="col-md-3"></div>
+            <div class="col-md-3"></div>
+            <div class="col-md-3"></div>
         </div>
+
     </div>
 
 </section>
+
+
+
+
