--- a/src/app/components/favourites/favourites.component.scss
+++ b/src/app/components/favourites/favourites.component.scss
@@ -1,3 +1,4 @@
+
 section .container h1{
     letter-spacing: 0.8px;
     font-size: 2.5rem;
@@ -32,3 +33,91 @@ section .container .content a:hover{
     opacity: 0.7;
     background-color: #707070;
 }
+
+
+
+// section .container .products{
+
+//     height: auto;
+//     height: 90vh;
+// }
+
+
+// section .container .products ul{
+//     list-style: none;
+// }
+
+
+// section .container .products ul li .productimg{
+//     height: 95%;
+// }
+
+// section .container .products ul li .productimg img{
+//     width: 100%;
+//     height: 100%;
+// }
+
+
+
+// section .container .products ul li .description{
+//     margin-top: 10px;
+// }
+
+// section .container .products ul li .description h2,
+// section .container .products ul li .description p{
+//     font-size: 15px;
+//     font-weight: bold;
+//     line-height: 0.7;
+//     padding-left: 5px;
+// }
+
+
+// section .container .products ul li .addtobasket{
+//     align-items: center;
+//     text-align: center;
+
+// }
+
+// section .container .products ul li .addtobasket button{
+//     width: 99%;
+//     padding: 20px ;
+//     border: 1px solid black;
+//     font-weight: 600;
+//     font-size: smaller;
+// }
+
+
+.productimg{
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+.productimg img{
+    width: 100%;
+    height: auto;
+}
+
+
+.description h2,p{
+    font-size: 0.9125rem;
+    font-weight: bold;
+}
+
+
+.first{
+    height: auto;
+}
+
+.addtobasket{
+    display: flex;
+    flex-direction: column;
+
+}
+
+
+.addtobasket button{
+    padding: 15px 0;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
