--- a/src/app/components/favourites/favourites.component.html
+++ b/src/app/components/favourites/favourites.component.html
@@ -4,10 +4,12 @@
             <h1>MY FAVOURITES</h1>
             <hr>
         </div>
-
         <div class="content">
             <p>Your favourites is empty.</p>
             <a class="btn btn-dark" href="home"> Go Shopping </a>
+        </div>
+        <div class="row">
+            
         </div>
     </div>
 
