--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,17 +1,23 @@
 
 <section class="Form " >
-        <div class="imgbanner  ">
+  <div class="container-fluid ">
+    <div class="row h-100 p-0">
+      <div class="col-md-6 p-0 first">
+        <div class="imgbanner">
              <div class="overlay">
                  <h1>Make your Fit here</h1>
                  <h3>Access 5,825,610 Collection, high-Quality Clothes you can't find anywhere else.</h3>
              </div>
         </div>
+      </div>
+      <div class="col-md-6 w-60">
         <div class="content">
             <h1>Join Us</h1>
             <p>Already have an account? <a routerLink="/login" href="#">Login</a> </p>
     <form (ngSubmit)="handeleRegister()" class="row g-4" [formGroup]="registerFrom">
       <div class="col-md-12">
         <label for="name" class="form-label">Name</label>
+        <span style="color: red;">*</span>
         <input type="text" formControlName="name" class="form-control" id="name">
         <div *ngIf="registerFrom.get('name')?.errors && registerFrom.get('name')?.touched" class="alert alert-danger">
           <p *ngIf="registerFrom.get('name')?.getError('required')" >Name is required</p>
@@ -22,7 +28,7 @@
 
       <div class="col-md-12">
         <label for="email" class="form-label">Email</label>
-        
+        <span style="color: red;">*</span>
           <input type="text" formControlName="email" class="form-control" id="email">
           <div *ngIf="registerFrom.get('email')?.errors && registerFrom.get('email')?.touched" class="alert alert-danger">
           <p *ngIf="registerFrom.get('email')?.getError('required')" >email is required</p>
@@ -31,6 +37,7 @@
       </div>
       <div class="col-md-12">
         <label for="phone" class="form-label">Phone</label>
+        <span style="color: red;">*</span>
         <input type="tel" formControlName="phone" class="form-control" id="phone" >
         <div *ngIf="registerFrom.get('phone')?.errors && registerFrom.get('phone')?.touched" class="alert alert-danger">
           <p *ngIf="registerFrom.get('phone')?.getError('required')">phone is required</p>
@@ -39,6 +46,7 @@
       </div>
       <div class="col-md-12">
         <label for="password" class="form-label">Password</label>
+        <span style="color: red;">*</span>
         <input type="text" formControlName="password" class="form-control" id="password">
         <div *ngIf="registerFrom.get('password')?.errors && registerFrom.get('password')?.touched" class="alert alert-danger">
           <p *ngIf="registerFrom.get('password')?.getError('required')">password is required</p>
@@ -47,6 +55,7 @@
       </div>
       <div class="col-md-12">
         <label for="rePassword" class="form-label">Re-Password</label>
+        <span style="color: red;">*</span>
         <input type="text" formControlName="rePassword" class="form-control" id="rePassword">
         <div *ngIf="registerFrom.get('rePassword')?.errors && registerFrom.get('rePassword')?.touched" class="alert alert-danger">
           <p *ngIf="registerFrom.get('rePassword')?.getError('required')">rePassword is required</p>
@@ -61,6 +70,38 @@
           </label>
         </div>
       </div>
+
+      <div class="col-md-12">
+        <!-- <h3>are you a ShopOwner?!</h3> -->
+        <label for="role">are you a Shop Owner?!</label>
+        <select id="UserAdmin" name="role" (change)="onRoleChange($event)" class="form-control" required>
+            <option value="user">Client</option>
+            <option value="admin">Shop Owner </option>
+        </select>
+      </div>
+
+      <div  class="col-md-12">
+        <form *ngIf="selectedRole === 'admin'" action="">
+          <label for="ShopName" class="form-label">Shop Name</label>
+        <span style="color: red;">*</span>
+          <input type="text" class="form-control" id="shopName">
+          <label for="address" class="form-label">address</label>
+        <span style="color: red;">*</span>
+          <input type="text" class="form-control" id="address">
+          <label for="category" class="form-label">Category</label>
+        <span style="color: red;">*</span>
+          <select id="category" name="category" class="form-control" required>
+              <option value="woman">  Woman</option>
+              <option value="men">  Men </option>
+              <option value="sport">  Sport </option>
+              <option value="baby">  Baby </option>
+          </select>
+          <label for="progileImg" class="form-label">Profile Image</label>
+        <span style="color: red;">*</span>
+          <input type="file"  class="form-control" id="progileImg">
+        </form>
+      </div>
+
       <div class="col-md-12">
         <button [disabled]="registerFrom.invalid" class="btn btn-dark w-100" type="submit">Join</button>
       </div>
@@ -68,6 +109,9 @@
       <p *ngIf="errMess" class="alert alert-danger"> {{errMess}} </p>
     </form>
         </div>
+      </div>
+    </div>
+  </div>
 </section>
     
 
