--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -1,19 +1,25 @@
 
-section{
-    display: flex;
-     width: 203.176vh;
-    align-items: center;
-    overflow-x: hidden;
-}
 
-.content{
+.container{
     display: flex;
-    flex-direction: column;
-    width: 30%;
-    margin-left: 300px;
+  flex-direction: column;
+  justify-content: center; /* Center content vertically */
+  align-items: center;     /* Center content horizontally */
+  height: 100%; 
+}
+.content{
+    width: 80%;
+    margin-left: 30px;
 }
 .content p,h1{
     text-align: center;
+}
+.row{
+    height: 100%;
+}
+.row .first .imgbanner{
+    height: 100vh;
+    min-height: 100%;
 }
 .content h1{
     font-weight: bold;
@@ -25,11 +31,13 @@ section{
 .imgbanner{
     display: flex;
     align-items: center;
-    width: 850px;
-    height: 945px;
+    width: 90%;
+    height: 100%;
     background-image: url(../../../assets/images/alberto-cognetti-GfkIiqcNn5k-unsplash.jpg);
     background-position:center;
     background-size: cover;
+    margin: 0 20px 0 0;
+    
 }
 .imgbanner .overlay h1,h3{
     text-align: start;
