--- a/src/app/components/favourites/favourites.component.html
+++ b/src/app/components/favourites/favourites.component.html
@@ -4,11 +4,8 @@
             <h1>MY FAVOURITES</h1>
             <hr>
         </div>
-<<<<<<< HEAD
         <div class="content">
-=======
         <!-- <div class="content">
->>>>>>> 510b55f682457a9de13877ce84efa61b5ba9a7b2
             <p>Your favourites is empty.</p>
             <a class="btn btn-dark" href="home"> Go Shopping </a>
         </div> -->
@@ -30,15 +27,11 @@
             <div class="col-md-3"></div>
             <div class="col-md-3"></div>
         </div>
-<<<<<<< HEAD
         <div class="row">
             
         </div>
-=======
-
->>>>>>> 510b55f682457a9de13877ce84efa61b5ba9a7b2
     </div>
-
+</div>
 </section>
 
 
