--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -10,7 +10,7 @@
              </div>
         </div>
       </div>
-      <div class="col-md-6 w-60">
+      <div class="col-md-6 w-60 my-4">
         <div class="content">
             <h1>Join Us</h1>
             <p>Already have an account? <a routerLink="/login" href="#">Login</a> </p>
@@ -103,7 +103,7 @@
       </div>
 
       <div class="col-md-12">
-        <button [disabled]="registerFrom.invalid" class="btn btn-dark w-100" type="submit">Join</button>
+        <button [disabled]="registerFrom.invalid" class="btn btn-dark w-100 my-3" type="submit">Join</button>
       </div>
 
       <p *ngIf="errMess" class="alert alert-danger"> {{errMess}} </p>
