--- a/src/styles.scss
+++ b/src/styles.scss
@@ -90,24 +90,24 @@ div.owl-dots{
 
 .owl-theme .owl-nav.disabled + .owl-dots {
     display: block;
-    opacity: 0; /* Start invisible */
-    transform: translateY(20px); /* Start slightly below */
+    opacity: 0; 
+    transform: translateY(20px); 
     transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
-    visibility: hidden; /* Hidden but won't affect layout */
+    visibility: hidden; 
 }
 
 .owl-theme[_ngcontent-ng-c2947750150]:hover .owl-nav.disabled + .owl-dots {
     visibility: visible;
     opacity: 1;  
-    transform: translateY(0);  /* Move to normal position */
+    transform: translateY(0);  
     transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
 }
 
-/* Ensure that when the hover ends, it smoothly fades out */
+
 .owl-theme .owl-nav.disabled + .owl-dots {
     visibility: visible;
     opacity: 0;
-    transform: translateY(20px); /* Back to below position */
+    transform: translateY(20px); 
     transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
 }
 
