--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,9 +9,6 @@ body{
     background-color: #faf9f8
 }
 
-
-
-
 .isActive{
     color:white;
     background-color: brown;
@@ -22,14 +19,12 @@ body{
 
 .owl-carousel .owl-nav .owl-next:hover{
     font-weight: bold;
-    // background-color: white;
     background-color: #faf9f8;
     color: black;
     
 }
 .owl-carousel .owl-nav .owl-prev:hover{
     font-weight: bold;
-    // background-color: white;
     background-color: #faf9f8;
     color: black;
     
@@ -58,20 +53,18 @@ body{
 
 .owl-dots {
     position: relative;
-    bottom: 38px;
-    justify-content: center; 
+    bottom: 40px;
 }
 
 
 .owl-dot {
-    width: 12px;
     height: 12px;
-    margin: 0 5px;
     border-radius: 50%;
     cursor: pointer;
     transition: background-color 0.3s ease;
     position: relative;
     bottom: 2px;
+    
 }
 
 
@@ -88,19 +81,13 @@ div.owl-dots{
 
 
 
-.owl-theme .owl-nav.disabled + .owl-dots {
-    display: block;
-    opacity: 0; 
-    transform: translateY(20px); 
-    transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
-    visibility: hidden; 
-}
-
 .owl-theme[_ngcontent-ng-c2947750150]:hover .owl-nav.disabled + .owl-dots {
     visibility: visible;
     opacity: 1;  
     transform: translateY(0);  
     transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
+    margin-top: 6px;
+    margin-right: 1px;
 }
 
 
@@ -109,5 +96,34 @@ div.owl-dots{
     opacity: 0;
     transform: translateY(20px); 
     transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin-right: 1px;
+
 }
 
+
+
+////////////////////////
+
+.owl-carousel .owl-item {
+  flex: 1 0 100%;
+  display: flex;
+  align-items: center; 
+  justify-content: center; 
+  box-sizing: border-box; 
+}
+
+.owl-carousel .owl-stage {
+  display: flex;
+  flex-wrap: nowrap;
+    max-width: 100%;
+    object-fit: cover;    
+}
+.owl-carousel {
+  width: auto;
+  overflow: hidden;
+  position: relative;
+}
