--- a/src/app/components/favourites/favourites.component.scss
+++ b/src/app/components/favourites/favourites.component.scss
@@ -1,4 +1,3 @@
-
 section{
     box-sizing: border-box;
   position: relative;
@@ -91,7 +90,83 @@ section .container .content a:hover{
     margin-bottom: 5px;
 }
 
+///////////////////////////////////////////////////////////////////////////
+.owl-dots {
+    position: relative;
+    bottom: 40px;
+}
 
+
+.owl-dot {
+    height: 12px;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    position: relative;
+    bottom: 2px;
+    
+}
+
+
+
+div.owl-dots{
+    background-color: hsl(34, 44%, 69%);
+    box-sizing: border-box;
+}
+
+
+.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
+    background-color: red;
+}
+
+
+
+.owl-theme[_ngcontent-ng-c2947750150]:hover .owl-nav.disabled + .owl-dots {
+    visibility: visible;
+    opacity: 1;  
+    transform: translateY(0);  
+    transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
+    margin-top: 6px;
+    margin-right: 1px;
+}
+
+
+.owl-theme .owl-nav.disabled + .owl-dots {
+    visibility: visible;
+    opacity: 0;
+    transform: translateY(20px); 
+    transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin-right: 1px;
+
+}
+
+
+
+////////////////////////
+
+.owl-carousel .owl-item {
+  flex: 1 0 100%;
+  display: flex;
+  align-items: center; 
+  justify-content: center; 
+  box-sizing: border-box; 
+}
+
+.owl-carousel .owl-stage {
+  display: flex;
+  flex-wrap: nowrap;
+    max-width: 100%;
+    object-fit: cover;    
+}
+.owl-carousel {
+  width: auto;
+  overflow: hidden;
+  position: relative;
+}
 
 
 
