--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -22,7 +22,7 @@
     </section>
     
     <section>
-        <div class="container ">
+        <div class="container " >
             <div class="row">
                 <!-- <div class="col-md-1"></div> -->
                 <div class="col-md-12">
@@ -85,7 +85,7 @@
     </section>
 
     <section>
-        <div class="container">
+        <div class="container" id="slide">
             <div class="row">
                 <!-- <div class="col-md-1"></div> -->
                 <div class="col-md-12">
