--- a/src/app/components/nav-blank/nav-blank.component.html
+++ b/src/app/components/nav-blank/nav-blank.component.html
@@ -13,20 +13,20 @@
             </form>
             <a class="navbar-brand" routerLink="home"> <img src="../../../assets/images/site-logo.svg" alt=""> </a>
         <!--  -->
-            <div class=" icon mx-5 mb-4">
+            <div class=" icon mx-5 mb-4" >
                 <!-- <svg (click)="toggelIcon()" routerLink="favourites" [ngClass]="{'filled': isActive }" width="30" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path stroke="black" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" />
                 </svg> -->
     
-                <svg routerLink="favourites" width="30" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path stroke="black"   d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"  />
+                <svg routerLink="#" (click)="navigateToSection()"  width="30" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path stroke="black" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"  />
                 </svg>
                 <a routerLink="cart" class="position-relative mx-5" href="#" ><i class="fa-solid fa-bag-shopping "></i></a>
                 
             </div>
         </div>
     
-        <div class="S-section">
+        <div class="S-section" >
             <nav class="navbar navbar-expand-md navbar-light d-flex justify-content-center ">
                 <div class="container- bg-nav ">
                     <div class="collapse navbar-collapse" id="collapsibleNavId"> 
